# roborpc

./: README.md  environment_ubuntu.yml  mkdocs.yml  paper.md  pyproject.toml  requirements.txt
docs/: data_collection.md  hardware_preparation.md  software_preparation.md
roborpc/: robot_env.py
roborpc/cameras/: calibration_utils.py  camera_base.py  camera_utils.py  composed_multi_cameras.py  multi_cameras.py  realsense_camera.py  transformations.py  zed_camera.py
roborpc/collector/: data_collector.py  data_collector_utils.py  sim_data_collector.py
roborpc/common/: config_loader.py  logger_loader.py
roborpc/controllers/: composed_multi_controllers.py  controller_base.py  dynamixel_controller.py  dynamixel_controller_utils.py  gello_controller.py  gello_controller_rpc.py  keyboard_controller.py  multi_controllers.py  oculus_controller.py  quest_controller.py  spacemouse_agent.py  spacemouse_controller.py
roborpc/data_convert/: data_convert.py  data_convert_octo.py  multi_task_dataset.py  updata_h5_info.py  utils.py  visualize_dataset.py
roborpc/kinematics_solver/: curobo_solver_kinematic.py  kinematic_solver_base.py  trajectory_interpolation.py
roborpc/motion_planning/: curobo_planner.py  planner_base.py
roborpc/robots/: composed_different_multi_robots.py  composed_multi_robots.py  composed_sim_robots.py  dynamixel.py  isaac_sim_franka_rpc.py  multi_robots.py  panda.py  realman.py  realman_rpc.py  robot_base.py  robotiq_gripper.py  sim_franka_rpc.py  ur.py  xarm.py
roborpc/sim_robots/: sim_daemon_launcher.py  (+1 more)
scripts/: code_quality.sh  run_sim_script.sh
(+96 files in other folders)
