[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "roborpc"
authors = [
    {name = "Yong Wang "}
]
description = "A Python library for robotics remote procedure calls using ZeroRPC"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["robotics"]
dependencies = [
    "zerorpc",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "ipython",
    "pre-commit",
    "ruff",
]
postprocessing = [
    "scikit-image",
]

[project.urls]
homepage = "https://github.com/WangYong-999/roborpc.git"
repository = "https://github.com/WangYong-999/roborpc.git"
documentation = "https://github.com/WangYong-999/roborpc.git"

[tool.black]
line-length = 121
target-version = ["py37", "py38", "py39", "py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py38"
select = ["A", "B", "C90", "E", "F", "I", "RUF", "W"]
ignore = ["F405", "B006", "C901", "F403", "E722"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.isort]
profile = "black"
line_length = 121
skip = ["__init__.py"]
filter_files = true
py_version = "all"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache"]
